# DXOPPRenderer

./: .gitignore  CMakeLists.txt  README.md
src/: App.cpp  App.h  Camera.cpp  Camera.h  ConstantBuffer.cpp  ConstantBuffer.h  IndexBuffer.cpp  IndexBuffer.h  Mesh.cpp  Mesh.h  OBJ_Loader.h  PixelShader.hlsl  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  Triangle.cpp  Triangle.h  VertexBuffer.cpp  VertexBuffer.h  VertexShader.hlsl  Window.cpp  Window.h  common.h  main.cpp
